# leadership-decision-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
backend/src/: py.typed
backend/src/agents/: leadership_agent.py  prompts.py
backend/src/api/: agent_routes.py  collection_routes.py  dependencies.py  ingest_routes.py  main.py  query_routes.py  routes.py  seed.py
backend/src/core/: __init__.py  config.py  database.py  llm_provider.py  log.py  security.py  telemetry.py
backend/src/evaluation/: pipeline.py
backend/src/ingestion/: chunking.py  excel_parser.py  parsers.py  pipeline.py
backend/src/models/: domain.py  schemas.py  tables.py
backend/src/tools/: rag_tool.py  search_tool.py  sql_tool.py
backend/tests/: conftest.py
backend/tests/evaluation/: golden_dataset.json  multi_tool_golden_dataset.json  test_multi_tool_eval.py  test_rag_quality.py
backend/tests/integration/: test_api_integration.py  test_e2e_agent.py  test_e2e_rag.py  test_e2e_sql.py
backend/tests/unit/: test_agent_routes.py  test_api.py  test_ci.py  test_collection_routes.py  test_config.py  test_database.py  test_docker.py  test_excel_parser.py  test_ingest_api.py  test_ingestion.py  test_leadership_agent.py  test_llm_provider.py  test_multi_collection_search.py  test_query_api.py  test_rag_tool.py  test_scaffold.py  test_security.py  test_seed.py  test_sql_tool.py  test_tables.py  test_telemetry.py  test_ui_api_client.py
data/sample_documents/: README.md  leadership_kpis.xlsx  leadership_meeting_notes_feb2026.md  quarterly_review_q4_2025.txt  strategic_plan_2026.md
docs/: api-reference.md  architecture.md  deployment.md  development.md
infra/docker/: Dockerfile  init-db.sql  start.sh
infra/terraform/: .gitignore  .terraform.lock.hcl  locals.tf  main.tf  outputs.tf  terraform.tf  variables.tf
infra/terraform/environments/: production.tfvars  staging.tfvars
ui/: __init__.py  api_client.py  app.py
