[project]
name = "leadership-decision-assistant"
version = "0.1.0"
description = "Enterprise AI assistant for leadership insight and strategic decision support"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
keywords = ["rag", "llm", "leadership", "enterprise", "ai-agent", "decision-support"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "llama-index-core>=0.14.0",
    "llama-index-llms-openai>=0.4.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-vector-stores-postgres>=0.6.0",
    "llama-index-readers-file>=0.4.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.18",
    "pgvector>=0.3.0",
    "redis[hiredis]>=5.2.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-exporter-prometheus>=0.48b0",
    "prometheus-client>=0.21.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "streamlit>=1.41.0",
]

[project.urls]
Repository = "https://github.com/s1v4-d/leadership-decision-assistant"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "mypy>=1.14.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "factory-boy>=3.3.0",
    "polyfactory>=2.18.0",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.2.0",
]
providers = [
    "llama-index-llms-anthropic>=0.6.0",
    "llama-index-llms-ollama>=0.5.0",
    "llama-index-embeddings-huggingface>=0.5.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src", "ui"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["backend/src", "ui"]

[tool.ruff.lint]
select = [
    "E", "W", "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
    "S",
    "T20",
    "PTH",
    "ERA",
    "PL",
    "PERF",
    "FURB",
    "LOG",
    "TID",
    "D",
    "ANN",
    "ASYNC",
    "FBT",
    "A",
    "C4",
    "DTZ",
    "ICN",
    "PIE",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "ARG",
]
ignore = [
    "D100",
    "D104",
    "D203",
    "D213",
    "S101",
    "PLR0913",
    "FBT001",
    "FBT002",
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101", "ANN", "D", "ARG", "PLR2004", "PLC0415"]
"backend/src/core/llm_provider.py" = ["PLC0415"]
"ui/**/*.py" = ["T20", "ANN", "D"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "pydantic_settings.BaseSettings"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "llama_index.*",
    "streamlit.*",
    "pgvector.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "slowapi.*",
    "structlog.*",
    "asyncpg.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (require running services)",
    "evaluation: RAG evaluation tests (slow, require LLM)",
]
addopts = "-v --tb=short -m 'not integration and not evaluation'"
